--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li><a href="#" class="active" style="--navAni:1">Home</a></li>
                 <li><a href="card.html" style="--navAni:2">About</a></li>
                 <li><a href="https://tourism97734.ccbp.tech/" style="--navAni:3">Skills</a></li>
-                <li><a href="#" style="--navAni:4">Education</a></li>
-                <li><a href="#" style="--navAni:5">Contact</a></li>
+                <li><a href="card.html" style="--navAni:4">Education</a></li>
+                <li><a href="card.html" style="--navAni:5">Contact</a></li>
                 <li><a href="https://mohan1729.ccbp.tech/" style="--navAni:5">prjects</a></li>
             </ul>
             <label class="mode">
