--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 
 <body>
+    <div id="sectionlogo">
+    <div class="cardmain">
+        <a href="https://mohan141729.github.io/MDTech-website/">
+        <div class="card" onclick="display('sectionhome')">
+            <img src="https://res.cloudinary.com/dovmtmu7y/image/upload/v1704006273/m3-removebg-preview_rn2wde.png"class="img-card">           
+        </div>
+        </a>        
+    </div>
+    </div>
+    <div id="sectionhome">
     <header class="container">
         <div class="page-header">
             <div class="logo">
@@ -83,6 +93,7 @@
             }
         });
     </script>
+    </div>
 </body>
 
 </html>
