--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 <li><a href="#" style="--navAni:3">Skills</a></li>
                 <li><a href="#" style="--navAni:4">Education</a></li>
                 <li><a href="#" style="--navAni:5">Contact</a></li>
-                <li><a href="project.html"  style="--navAni:5">prjects</a></li>
+                <li><a href="project.html"  style="--navAni:5">projects</a></li>
             </ul>
             <label class="mode">
                 <input type="checkbox" id="darkModeToggle">
