--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
                 <li><a href="#" style="--navAni:3">Skills</a></li>
                 <li><a href="#" style="--navAni:4">Education</a></li>
                 <li><a href="#" style="--navAni:5">Contact</a></li>
-                <li><a href="project.html" class="active" style="--navAni:5">prjects</a></li>
+                <li><a href="project.html" class="active" style="--navAni:5">projects</a></li>
             </ul>
             <label class="mode">
                 <input type="checkbox" id="darkModeToggle">
